Correction mobile

--- a/style.css
+++ b/style.css
@@ -156,4 +156,14 @@ figure.concept{
         display: flex;
         flex-direction: column;
     }
+
+    header {
+        display: none;
+    }
+
+    #select-buttons {
+        display: flex;
+        flex-direction:column;
+        font-size: 3rem;
+    }
 }
